<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movie_details_layout">
    <data>
        <variable
            name="movie"
            type="com.example.viniciuscoscia.filmesfamosospt2.entity.movie.Movie"/>
        <variable
            name="reviewsNumber"
            type="String"/>
        <variable
            name="trailersNumber"
            type="String"/>
        <import type="com.example.viniciuscoscia.filmesfamosospt2.utils.Utils"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clear_grey"
        >

        <View
            android:id="@+id/red_backgroud"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter"
            app:imageUrl="@{movie.posterPath}"
            app:layout_constraintBottom_toBottomOf="@+id/red_backgroud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="favoriteMovie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_border_white_24dp" />

        <ScrollView
            android:id="@+id/mScrollViewMovieDetails"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red_backgroud">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/tv_titulo_filme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@{movie.title}"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Título Filme" />

                        <TextView
                            android:id="@+id/tv_data_lancamento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/data_lancamento"
                            android:textColor="@color/darkest_grey"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@+id/guideline"
                            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_filme" />

                        <TextView
                            android:id="@+id/tv_data_lancamento_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="8dp"
                            android:text="@{Utils.formatarData(movie.releaseDate)}"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_data_lancamento"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/tv_data_lancamento"
                            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_filme"
                            tools:text="22/04/1994" />

                        <TextView
                            android:id="@+id/tv_nota_media"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/nota_media"
                            android:textColor="@color/darkest_grey"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@+id/guideline"
                            app:layout_constraintTop_toBottomOf="@+id/tv_data_lancamento" />

                        <RatingBar
                            android:id="@+id/rb_nota"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:numStars="5"
                            android:rating="@{(movie.voteAverage/2)}"
                            android:stepSize="0.1"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_nota_media"
                            app:layout_constraintStart_toEndOf="@+id/tv_nota_media"
                            app:layout_constraintTop_toTopOf="@+id/tv_nota_media" />

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.62" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_sinopse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_principal">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tv_sinopse_titulo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/sinopse"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_sinopse_texto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@{movie.overview}"
                            android:textAlignment="viewStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_sinopse_titulo"
                            tools:text="O filme é muito bom, o filme é bom demais!!!" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_avaliacoes_usuarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_sinopse">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tv_analise_usuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/avaliacao_usuarios"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_reviews_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@color/colorAccent"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:text="@{reviewsNumber}"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/tv_analise_usuario"
                            app:layout_constraintStart_toEndOf="@+id/tv_analise_usuario"
                            app:layout_constraintTop_toTopOf="@id/tv_analise_usuario"
                            tools:text="0" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/cv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_avaliacoes_usuarios">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tv_trailers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/trailers"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_trailers_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@color/colorAccent"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:text="@{trailersNumber}"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/tv_trailers"
                            app:layout_constraintStart_toEndOf="@+id/tv_trailers"
                            app:layout_constraintTop_toTopOf="@id/tv_trailers"
                            tools:text="0" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>


